--- a/MSAzureServicesExamples/MSAzureServicesExamples/Views/RedisCacheExamplePage.xaml
+++ b/MSAzureServicesExamples/MSAzureServicesExamples/Views/RedisCacheExamplePage.xaml
@@ -1,24 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MSAzureServicesExamples.Views.EmployeesPage">
+             x:Class="MSAzureServicesExamples.Views.RedisCacheExamplePage">
 
     <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
-        <StackLayout Margin="10" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
-            <Label Text="{Binding UserName, StringFormat='Welcome {0}'}" FontSize="Large" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+        <StackLayout Margin="10">
+            <Label Text="Fetching list of employees using Azure Redis cache" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" FontSize="Default" FontAttributes="Bold"/>
 
             <Label Text="{Binding TimeTaken}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" FontSize="Default" FontAttributes="Bold"/>
 
-            <ListView x:Name="EmployeeList" ItemsSource="{Binding Employees}" ItemSelected="OnItemselected">
+            <ListView x:Name="EmployeeList" ItemsSource="{Binding Employees}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextCell Text="{Binding Name}" Detail="{Binding Age}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-
-            <Button Text="Add Employee" IsVisible="{Binding IsVisible}" BackgroundColor="DarkSlateBlue" TextColor="White" VerticalOptions="End" Command="{Binding AddEmployeeCommand}"/>
         </StackLayout>
 
         <StackLayout IsVisible="{Binding IsBusy}" Padding="12"
