--- a/MSAzureServicesExamples/MSAzureServicesExamples/Views/EmployeesPage.xaml
+++ b/MSAzureServicesExamples/MSAzureServicesExamples/Views/EmployeesPage.xaml
@@ -10,7 +10,7 @@
 
             <Label Text="{Binding TimeTaken}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" FontSize="Default" FontAttributes="Bold"/>
 
-            <ListView x:Name="EmployeeList" ItemsSource="{Binding Employees}" ItemSelected="OnItemselected">
+            <ListView x:Name="EmployeeList" ItemsSource="{Binding Employees}" ItemSelected="OnItemselected" CachingStrategy = "RecycleElement">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextCell Text="{Binding Name}" Detail="{Binding Age}" />
